# ninterp

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml  release.yaml  test.yaml
benches/: benchmark.rs
examples/: custom_strategy.rs  dynamic_interpolator.rs  dynamic_strategy.rs  uom.rs
src/: data.rs  error.rs  lib.rs  n.rs  one.rs  serde.rs  strategy.rs  three.rs  traits.rs  two.rs  zero.rs
src/interpolator/: data.rs  enums.rs  mod.rs
src/interpolator/n/: mod.rs  strategies.rs  tests.rs
src/interpolator/one/: mod.rs  strategies.rs  tests.rs
src/interpolator/three/: mod.rs  strategies.rs  tests.rs
src/interpolator/two/: mod.rs  strategies.rs  tests.rs
src/interpolator/zero/: mod.rs
src/n/: mod.rs  strategies.rs
src/one/: mod.rs  strategies.rs  tests.rs
src/strategy/: cubic.rs  mod.rs  traits.rs
src/strategy/enums/: mod.rs  n.rs  one.rs  three.rs  two.rs
src/three/: mod.rs  strategies.rs  tests.rs
src/two/: mod.rs  strategies.rs
src/zero/: mod.rs
