[package]
name = "ninterp"
version = "0.6.3"
edition = "2021"
description = "Numerical interpolation for N-dimensional rectilinear grids"
repository = "https://github.com/NREL/ninterp"
license = "BSD-3-Clause"
keywords = [
    "interpolation",
    "multidimensional",
    "multilinear",
    "numerical",
    "linear",
]
categories = ["mathematics"]

[dependencies]
dyn-clone = "1.0.19"
itertools = "0.13.0"
ndarray_v0_15 = { package = "ndarray", version = "0.15", optional = true }
ndarray_v0_16 = { package = "ndarray", version = "0.16", optional = true }
num-traits = "0.2.19"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1.0.64"

[dev-dependencies]
criterion = "0.5.1"
ndarray-rand = "0.15.0"
approx = "0.5.1"
uom = "0.36.0"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["ndarray_v0_16"]
ndarray_v0_15 = ["dep:ndarray_v0_15"]
ndarray_v0_16 = ["dep:ndarray_v0_16"]
serde = ["dep:serde", "ndarray_v0_16?/serde", "ndarray_v0_15?/serde"]
