[package]
name = "ninterp"
version = "0.7.3"
edition = "2021"
description = "Numerical interpolation for N-dimensional rectilinear grids"
repository = "https://github.com/NREL/ninterp"
license = "BSD-3-Clause"
keywords = [
    "interpolation",
    "multidimensional",
    "multilinear",
    "numerical",
    "linear",
]
categories = ["mathematics"]

[dependencies]
dyn-clone = "1"
itertools = { version = ">=0.13.0, <0.15", default-features = false }
ndarray = { version = ">=0.15.3, <0.17", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
serde = { version = "1.0.103", optional = true, features = ["derive"] }
serde_unit_struct = { version = "0.1.3", optional = true }
thiserror = { version = "2.0.0", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
ndarray-rand = "0.15.0" # note: for `cargo bench`, ndarray 0.16 must be used
approx = "0.5.1"
uom = "0.36.0"
serde_json = "1.0.140"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
serde = ["dep:serde", "ndarray/serde", "dep:serde_unit_struct"]
std = ["itertools/use_std", "ndarray/std", "num-traits/std", "thiserror/std"]
