[package]
name = "ninterp"
version = "0.8.0"
edition = "2021"
description = "Numerical interpolation for N-dimensional rectilinear grids"
repository = "https://github.com/NREL/ninterp"
license = "BSD-3-Clause"
keywords = [
    "interpolation",
    "multidimensional",
    "multilinear",
    "numerical",
    "linear",
]
categories = ["mathematics"]

[dependencies]
dyn-clone = "1"
itertools = "0.13.0"
ndarray = "0.17"
num-traits = "0.2.15"
serde = { version = "1.0.103", optional = true, features = ["derive"] }
serde_unit_struct = { version = "0.1.3", optional = true }
thiserror = "1.0.1"

[dev-dependencies]
criterion = "0.5.1"
ndarray-rand = "0.16.0"
approx = "0.5.1"
uom = "0.36.0"
serde_json = "1.0.140"

[[bench]]
name = "benchmark"
harness = false

[features]
serde = ["dep:serde", "ndarray/serde", "dep:serde_unit_struct"]
